# spotigui

./: .dockerignore  .env.example  .gitignore  BUILDING.md  BUILD_RASPBERRY_PI.md  BUILD_README.md  BUILD_SUMMARY.md  CLAUDE.md  CROSS_COMPILE.md  Dockerfile.rpi  LICENSE  PACKAGING_SUMMARY.md  QUICKSTART_DOCKER.md  QUICK_START_RPI.md  README.md  README_RASPBERRY_PI.txt  build.sh  build_rpi.sh  build_rpi_docker.sh  pyproject.toml  requirements.txt  setup_rpi.sh  transfer_to_rpi.sh
src/spotigui/: __init__.py  config.py  main.py  oauth_callback_server.py  spotify_api.py
src/spotigui/screens/: __init__.py  home_screen.kv  home_screen.py  init_screen.kv  init_screen.py  login_screen.kv  login_screen.py  now_playing_screen.kv  now_playing_screen.py
src/spotigui/widgets/: __init__.py  playback_controls.kv  playback_controls.py  playlist_tile.kv  playlist_tile.py  progress_bar.kv  progress_bar.py  topbar.kv  topbar.py  track_progress.kv  track_progress.py  volume_sheet.kv  volume_sheet.py
tests/: __init__.py
